force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>Main object for Invoice details. Contains key data points such as Account Name, Invoice Date, and Balance Due Amount.</description>
    <label>Invoice</label>
    <nameField>
        <displayFormat>INV-{YYMMDD}-{0000000}</displayFormat>
        <label>Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>