force-app/main/default/objects/Invoice__c/fields/AdditionalChargeCreditTaxAmount__c.field-meta.xml
<CustomField>
    <fullName>AdditionalChargeCreditTaxAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Additional Charge/Credit Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>