force-app/main/default/objects/Invoice__c/fields/AddOnlinePaymentDetailsinPDF__c.field-meta.xml
<CustomField>
    <fullName>AddOnlinePaymentDetailsinPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Adds either PayPal or Google Checkout online payment instructions and an embedded link to the PDF. The preferred online payment processor is decided by your Administrator and your payment merchant account service type.</inlineHelpText>
    <label>Add Checkout to Invoice</label>
    <type>Checkbox</type>
</CustomField>