force-app/main/default/objects/Invoice__c/fields/BillToStateProvince__c.field-meta.xml
<CustomField>
    <fullName>BillToStateProvince__c</fullName>
    <label>Bill To State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>