force-app/main/default/objects/Invoice__c/fields/BillToStreet__c.field-meta.xml
<CustomField>
    <fullName>BillToStreet__c</fullName>
    <label>Deprecated</label>
    <length>80</length>
    <type>Text</type>
</CustomField>