force-app/main/default/objects/Invoice__c/fields/BillToZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BillToZipPostalCode__c</fullName>
    <label>Bill To Zip/Postal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>