force-app/main/default/objects/Invoice__c/fields/CustomerPODate__c.field-meta.xml
<CustomField>
    <fullName>CustomerPODate__c</fullName>
    <label>Customer PO Date</label>
    <type>Date</type>
</CustomField>