force-app/main/default/objects/Invoice__c/fields/CustomerPONumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerPONumber__c</fullName>
    <label>Customer PO Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>