force-app/main/default/objects/Invoice__c/fields/CustomOnlinePageStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomOnlinePageStatus__c</fullName>
    <formula>IF(
AND(RecordStatus__c &lt;&gt; &quot;Cancelled&quot;),
(&quot;[&quot; &amp; HYPERLINK(&quot;https://fivestarprofessional.secure.force.com&quot;  &amp; &quot;/CustomOnlineInvoice?key=&quot; &amp; OnlineApprovalKey__c &amp; &quot;&amp;id=&quot;&amp; Id &amp; &quot;&amp;retURL=/CustomOnlineInvoice%3Fkey=&quot; &amp; OnlineApprovalKey__c &amp; &quot;%26id=&quot;&amp; Id, &quot;Preview&quot;) &amp; &quot;] &quot; ),
IF(
OR(
RecordStatus__c = &quot;Cancelled&quot;
), 
&quot;Inactive&quot;,
&quot;Expired&quot;
)
)</formula>
    <label>Online Invoice Page Status</label>
    <type>Text</type>
</CustomField>