force-app/main/default/objects/Invoice__c/fields/DatePosted__c.field-meta.xml
<CustomField>
    <fullName>DatePosted__c</fullName>
    <label>Date Posted</label>
    <type>Date</type>
</CustomField>