force-app/main/default/objects/Invoice__c/fields/Do_Not_Send_Payment_Receipts__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Send_Payment_Receipts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Send Payment Receipts</label>
    <type>Checkbox</type>
</CustomField>