force-app/main/default/objects/Invoice__c/fields/Final_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Notice_Date__c</fullName>
    <label>Final Notice Date</label>
    <type>Date</type>
</CustomField>