force-app/main/default/objects/Invoice__c/fields/Final_Notice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Notice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Notice Sent</label>
    <type>Checkbox</type>
</CustomField>