force-app/main/default/objects/Invoice__c/fields/First_Notice_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Notice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Notice Sent</label>
    <type>Checkbox</type>
</CustomField>