force-app/main/default/objects/Invoice__c/fields/InternalRevenueRecognitionDate__c.field-meta.xml
<CustomField>
    <fullName>InternalRevenueRecognitionDate__c</fullName>
    <label>Revenue Recognition Date</label>
    <type>Date</type>
</CustomField>