force-app/main/default/objects/Invoice__c/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Invoice Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>