force-app/main/default/objects/Invoice__c/fields/InvoiceTextandTerms__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTextandTerms__c</fullName>
    <label>Invoice Terms &amp; Conditions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>