force-app/main/default/objects/Invoice__c/fields/IsPosted__c.field-meta.xml
<CustomField>
    <fullName>IsPosted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, Order Unrelease Function is Disabled for related Orders</inlineHelpText>
    <label>Posted</label>
    <type>Checkbox</type>
</CustomField>