force-app/main/default/objects/Invoice__c/fields/IsRestricted__c.field-meta.xml
<CustomField>
    <fullName>IsRestricted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, Manual Email Function is Disabled. Invoice Template displays Restricted message</inlineHelpText>
    <label>Restricted</label>
    <type>Checkbox</type>
</CustomField>