force-app/main/default/objects/Invoice__c/fields/LineDiscountAmount__c.field-meta.xml
<CustomField>
    <fullName>LineDiscountAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Line Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>