force-app/main/default/objects/Invoice__c/fields/LineNetAmount__c.field-meta.xml
<CustomField>
    <fullName>LineNetAmount__c</fullName>
    <formula>round(LineSubtotalAmount__c - LineDiscountAmount__c + LineTaxes__c + LineVATAmount__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>