force-app/main/default/objects/Invoice__c/fields/Lines__c.field-meta.xml
<CustomField>
    <fullName>Lines__c</fullName>
    <label>Invoice Line Count</label>
    <summaryForeignKey>InvoiceLine__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>