force-app/main/default/objects/Invoice__c/fields/LineSubtotalAmount__c.field-meta.xml
<CustomField>
    <fullName>LineSubtotalAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Line Subtotal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>