force-app/main/default/objects/Invoice__c/fields/LineTaxes__c.field-meta.xml
<CustomField>
    <fullName>LineTaxes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Line Taxes</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>