force-app/main/default/objects/Invoice__c/fields/LineVATAmount__c.field-meta.xml
<CustomField>
    <fullName>LineVATAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Line VAT/GST Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>