force-app/main/default/objects/Invoice__c/fields/OnlineApprovalKey__c.field-meta.xml
<CustomField>
    <fullName>OnlineApprovalKey__c</fullName>
    <label>Online Invoice Approval Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>