force-app/main/default/objects/Invoice__c/fields/PrintInvoiceTextandTerms__c.field-meta.xml
<CustomField>
    <fullName>PrintInvoiceTextandTerms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Print Invoice Terms &amp; Conditions</label>
    <type>Checkbox</type>
</CustomField>