force-app/main/default/objects/Invoice__c/fields/Second_Notice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Second_Notice_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Second Notice Sent</label>
    <type>Checkbox</type>
</CustomField>