force-app/main/default/objects/Invoice__c/fields/Sent_to_Collections__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Collections__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to Collections</label>
    <type>Checkbox</type>
</CustomField>