force-app/main/default/objects/Invoice__c/fields/ShipToName__c.field-meta.xml
<CustomField>
    <fullName>ShipToName__c</fullName>
    <label>Ship To Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>