force-app/main/default/objects/Invoice__c/fields/ShipToStreetLong__c.field-meta.xml
<CustomField>
    <fullName>ShipToStreetLong__c</fullName>
    <description>A longer version of the original ShipToStreet__c field</description>
    <label>Ship To Street</label>
    <type>TextArea</type>
</CustomField>