force-app/main/default/objects/Invoice__c/fields/ShipToZipPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ShipToZipPostalCode__c</fullName>
    <label>Ship To Zip/Postal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>