force-app/main/default/objects/Invoice__c/listViews/AllInvoices.listView-meta.xml
<ListView>
    <fullName>AllInvoices</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ContactBilling__c</columns>
    <columns>InvoiceDate__c</columns>
    <columns>InvoiceDueDate__c</columns>
    <columns>RecordStatus__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>