force-app/main/default/objects/Invoice__c/listViews/Historical_Orders.listView-meta.xml
<ListView>
    <fullName>Historical_Orders</fullName>
    <columns>NAME</columns>
    <columns>CustomerPONumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CustomerPONumber__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Historical Orders</label>
</ListView>